@@ -2,9 +2,7 @@ DECL|macro|QSSLCERTIFICATE_H
 DECL|typedef|X509
 DECL|variable|QDebug
 DECL|variable|QIODevice
-DECL|variable|QMultiMap
 DECL|variable|QSslCertificatePrivate
 DECL|variable|QSslError
 DECL|variable|QSslKey
 DECL|variable|QStringList
-DECL|variable|T
